Remove password minlength requirement in form

--- a/app/frontend/templates/users.html
+++ b/app/frontend/templates/users.html
@@ -77,8 +77,8 @@
               <input type="email" name="email" class="form-control" required>
             </div>
             <div class="form-group">
-              <label for="password">Mot de Passe (min 6 caractères)</label>
-              <input type="password" name="password" class="form-control" required minlength="6">
+              <label for="password">Mot de Passe</label>
+              <input type="password" name="password" class="form-control">
             </div>
             
             <div class="form-group">
@@ -170,7 +170,7 @@
                 <div class_form-group full-width" style="gap: 1rem;">
                   <div class="form-group">
                     <label for="password">Nouveau Mot de Passe</label>
-                    <input type="password" name="password" class="form-control" required minlength="6" placeholder="Nouveau mot de passe">
+                    <input type="password" name="password" class="form-control" placeholder="Nouveau mot de passe">
                   </div>
                   <div class="form-actions">
                     <button type="submit" class="btn btn-danger w-100">Réinitialiser</button>
